unpackaged/main/default/objects/POS_Service_Provider__c/POS_Service_Provider__c.object-meta.xml
<CustomObject>
    <label>POS Service Provider</label>
    <nameField>
        <displayFormat>AB-{00000}</displayFormat>
        <label>POS Service Provider Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Service Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>