unpackaged/main/default/objects/POS_Service_Provider__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Merchant__r.Owner.FirstName  &amp; &quot; &quot;  &amp;  Merchant__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>