unpackaged/main/default/objects/POS_Service_Provider__c/fields/Acquirer_Name__c.field-meta.xml
<CustomField>
    <fullName>Acquirer_Name__c</fullName>
    <formula>Acquiring_Bank__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquirer Name</label>
    <type>Text</type>
</CustomField>