unpackaged/main/default/objects/POS_Service_Provider__c/fields/Acquiring_Bank__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquiring Bank</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Acquirer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchants</relationshipLabel>
    <relationshipName>Acquiring_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>