unpackaged/main/default/objects/POS_Service_Provider__c/fields/Alipay__c.field-meta.xml
<CustomField>
    <fullName>Alipay__c</fullName>
    <label>Alipay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>