unpackaged/main/default/objects/POS_Service_Provider__c/fields/Currency_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion__c</fullName>
    <label>Currency Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>