unpackaged/main/default/objects/POS_Service_Provider__c/fields/In_house_or_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>In_house_or_Third_Party__c</fullName>
    <label>In-house or Third Party?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>