unpackaged/main/default/objects/POS_Service_Provider__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IKA Head Office, Head Office, NKA Head Office, IKA In-Fill Head Office, NKA In-Fill Head Office,Premier Tax Free Country Office, Merchant, Government Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Acquiring_Banks1</relationshipName>
    <type>Lookup</type>
</CustomField>