unpackaged/main/default/objects/POS_Service_Provider__c/fields/Merchant_Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Owning_Country__c</fullName>
    <formula>TEXT(Merchant__r.Owning_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Owning Country</label>
    <type>Text</type>
</CustomField>