unpackaged/main/default/objects/POS_Service_Provider__c/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS Solution</label>
    <referenceTo>POS_Solution__c</referenceTo>
    <relationshipName>Acquirers</relationshipName>
    <type>Lookup</type>
</CustomField>