unpackaged/main/default/objects/POS_Service_Provider__c/fields/POS_System__c.field-meta.xml
<CustomField>
    <fullName>POS_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS System</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>POS System</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Service Providers (POS System)</relationshipLabel>
    <relationshipName>POS_Service_Providers2</relationshipName>
    <type>Lookup</type>
</CustomField>