unpackaged/main/default/objects/POS_Service_Provider__c/fields/PSP_Gateway__c.field-meta.xml
<CustomField>
    <fullName>PSP_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSP/Gateway</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <filterItems>
            <field>Account.Provider_Type__c</field>
            <operation>equals</operation>
            <value>PSP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Service Providers (PSP/Gateway)</relationshipLabel>
    <relationshipName>POS_Service_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>