unpackaged/main/default/objects/POS_Service_Provider__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <formula>Acquiring_Bank__r.Name &amp; PSP_Gateway__r.Name &amp; Till_Provider__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider</label>
    <type>Text</type>
</CustomField>