unpackaged/main/default/objects/POS_Service_Provider__c/fields/TF_Services_for_Click_Collect__c.field-meta.xml
<CustomField>
    <fullName>TF_Services_for_Click_Collect__c</fullName>
    <label>TF Services for Click &amp; Collect?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>