unpackaged/main/default/objects/POS_Service_Provider__c/fields/Till_Provider__c.field-meta.xml
<CustomField>
    <fullName>Till_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Till Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <filterItems>
            <field>Account.Provider_Type__c</field>
            <operation>equals</operation>
            <value>Till Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Service Providers (Till Provider)</relationshipLabel>
    <relationshipName>POS_Service_Providers1</relationshipName>
    <type>Lookup</type>
</CustomField>