unpackaged/main/default/objects/POS_Service_Provider__c/fields/Till_Provider_Version__c.field-meta.xml
<CustomField>
    <fullName>Till_Provider_Version__c</fullName>
    <label>Till Provider Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>