unpackaged/main/default/objects/POS_Service_Provider__c/recordTypes/Acquirer.recordType-meta.xml
<RecordType>
    <fullName>Acquirer</fullName>
    <active>true</active>
    <label>Acquirer</label>
</RecordType>