unpackaged/main/default/objects/POS_Service_Provider__c/recordTypes/e_Commerce.recordType-meta.xml
<RecordType>
    <fullName>e_Commerce</fullName>
    <active>true</active>
    <label>e-Commerce</label>
</RecordType>