unpackaged/main/default/objects/POS_Service_Provider__c/recordTypes/POS_Acquiring_Bank.recordType-meta.xml
<RecordType>
    <fullName>POS_Acquiring_Bank</fullName>
    <active>true</active>
    <label>POS Acquiring Bank</label>
</RecordType>