unpackaged/main/default/objects/POS_Service_Provider__c/recordTypes/POS_System.recordType-meta.xml
<RecordType>
    <fullName>POS_System</fullName>
    <active>true</active>
    <label>POS System</label>
</RecordType>