unpackaged/main/default/objects/POS_Service_Provider__c/recordTypes/PSP_Gateway.recordType-meta.xml
<RecordType>
    <fullName>PSP_Gateway</fullName>
    <active>true</active>
    <label>PSP/Gateway</label>
</RecordType>