unpackaged/main/default/objects/POS_Service_Provider__c/recordTypes/Till_Provider.recordType-meta.xml
<RecordType>
    <fullName>Till_Provider</fullName>
    <active>true</active>
    <label>Till Provider</label>
</RecordType>